# TimeTrackerEX

./: .gitignore  README.md  at3-update.spec  at3.spec  build.bat  copilot-instructions.md  package-lock.json  pyproject.toml
.data/: example_ignore.json  example_settings.json
.github/scripts/: create_latest_json.py
.github/workflows/: release_TimeTrackerEX.yml
app/: __init__.py  __main__.py  algorithm.py  algorithm.test.py  api.py  app.py  app_info.py  async_queue.py  date.py  history.py  html.py  ignore.py  input_ics.py  input_pdf.py  logger.py  message_handler_factory.py  model.py  setting.py  update_app.py  util.py  view.py
update/: __init__.py  __main__.py  latest.json  update.py
web/: .eslintrc.cjs  .prettierrc  DOCUMENT_MAP.md  DOCUMENT_REORGANIZATION_PROPOSAL.md  README.md  copilot-instructions.md  index.html  package-lock.json  package.json  test-failures.txt  test-output.txt  test-results.json  vite.config.ts  vitest.setup.ts
web/docs/: refactoring-plan.md  refactoring-report.md  refactoring-summary.md
web/plan/: PHASE5_PLAN.md  PHASE5_PROGRESS.md  PHASE6_PLAN.md  PHASE6_PROGRESS.md  PHASE7_PARTIAL_COMPLETION_REPORT.md  PHASE7_PLAN.md  PHASE7_PROGRESS.md  README.md  TimeTracker_PLAN.md
web/prompt/: coding-rules.md  copilot-instructions.md
web/spec/: README.md  TimeTracker_API_SPEC.md  TimeTracker_IMPLEMENTATION_STATUS.md  TimeTracker_SPEC.md
web/src/: App.tsx  README.md  main.tsx
web/src/components/: README.md  REFACTORING.md  index.ts
web/src/core/: README.md  index.ts
web/src/lib/: README.md  asyncQueue.test.ts  asyncQueue.ts  index.ts  (+6 more)
(+281 files in other folders)
