[project]
name = "timetrackerex"
version = "0.0.5"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.12.0",
    "PyMuPDF>=1.25.3",
    "Jinja2>=3.1.5",
    "aiohttp>=3.11.13",
    "icalendar>=6.1.1",
    "psutil>=7.0.0",
    "requests>=2.32.5"
]

[tool.poetry.virtualenvs]
in-project = true
